--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h2>Baixe a planilha mais recente</h2>
-        <a href="/Mapa Estrategico 20.01.2025 manha -.xlsx" class="download-btn" download>Download</a>
+        <a href="Mapa Estrategico.xlsx" class="download-btn" download>Download</a>
     </main>
 
     <!-- Rodapé -->
