--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download - BAT Brasil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Estilos globais */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f2f5;
             margin: 0;
             padding: 0;
+            color: #333;
         }
 
         /* Cabeçalho */
         header {
-            background-color: #003399;
+            background-color: #1a237e; /* Azul mais escuro */
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 30px 0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
         header h1 {
             margin: 0;
-            font-size: 2rem;
+            font-size: 2.2rem;
+            font-weight: 700;
         }
 
         /* Seção principal */
@@ -32,40 +38,51 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 80vh;
+            min-height: calc(100vh - 100px); /* Ajusta a altura */
             text-align: center;
+            padding: 20px;
         }
 
-        main h2 {
-            color: #003399;
-            font-size: 1.5rem;
-        }
+         main h2 {
+            color: #1a237e; /* Azul mais escuro */
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin-bottom: 30px;
+         }
 
         /* Botão de download */
         .download-btn {
             display: inline-block;
-            background-color: #003399;
+            background-color: #283593; /* Azul mais escuro */
             color: white;
-            padding: 15px 30px;
-            font-size: 1rem;
+            padding: 15px 35px;
+            font-size: 1.1rem;
             font-weight: bold;
             text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            border-radius: 8px;
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
             margin-top: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
 
         .download-btn:hover {
-            background-color: #002266;
+            background-color: #1a237e; /* Tom mais escuro */
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
-
+        .download-btn:active {
+            transform: translateY(1px);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
         /* Rodapé */
         footer {
-            background-color: #003399;
+            background-color: #1a237e; /* Azul mais escuro */
             color: white;
             text-align: center;
-            padding: 10px;
-            font-size: 0.9rem;
+            padding: 20px 0;
+            font-size: 1rem;
+            margin-top: 50px;
+             box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
         }
     </style>
 </head>
