--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>BAT Brasil - Download de Arquivo</h1>
+        <h1>BAT Brasil - Download Mapa Estratégico</h1>
     </header>
 
     <!-- Conteúdo principal -->
